<resources>
    <string name="app_name">ChromaGlobs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectCardText">Select Card</string>
    <string name="cardDisplayDesc">Card Display Area</string>
    <string name="missions_text">Missions</string>
    <string name="update_file">versionInfo.xml</string>
    <string name="connection_error">Connection failed!</string>
    <string name="connection_error_message">Please restart the app and try again! If problems persist, please contact us! The app will now close.</string>
    <string name="positive_button_default">Okay</string>
    <string name="card_image_url">cardImages/</string>
    <string name="update_text">Updating: </string>
    <string name="info">This is a test</string>
    <string name="support_email">chromaglobs@gmail.com</string>
    <string name="decks_label">Decks</string>
    <string name="create_deck_label">Create Deck</string>
    <string name="collection_label">Collection</string>
    <string name="deck_num_label">Deck #</string>
    <string name="deck_one_label">Deck 1</string>
    <string name="deck_two_label">Deck 2</string>
    <string name="deck_three_label">Deck 3</string>
    <string name="deck_four_label">Deck 4</string>
    <string name="deck_five_label">Deck 5</string>
    <string name="search_label">Search:</string>
    <string name="deck_label">Deck</string>
    <string name="card_one_label">Card 1</string>
    <string name="card_two_label">Card 2</string>
    <string name="card_three_label">Card 3</string>
    <string name="card_four_label">Card 4</string>
    <string name="card_five_label">Card 5</string>
    <string name="card_count_label">0/20</string>
    <string name="complete_deck_label">Complete</string>
    <string name="shop_label">Shop</string>
    <string name="shop_prompt">Buy Cards and Packs!</string>
    <string name="currency_label">Blob$:</string>
    <string name="reward_claimed">Reward claimed!</string>
    <string name="money_label">Money:</string>
    <string name="level_label">Level:</string>
    <string name="battles_button_label">Battles</string>
    <string name="friends_label">Friends</string>
    <string name="username_label">Username</string>
    <string name="logout_button_label">Logout</string>
    <string name="battles_header">List of Battles</string>
</resources>
