<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment_layout"
    android:layout_width="382dp"
    android:layout_height="382dp"
    tools:context=".ProfileActivityMap.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="82dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/logout_button_label"
            app:layout_constraintEnd_toStartOf="@+id/userIcon"
            app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:text="@string/username_label"
            app:layout_constraintEnd_toStartOf="@+id/userIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="58dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/user_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/decksLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            android:text="@string/decks_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/battlesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/battles_button_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decksLabel" />

        <Button
            android:id="@+id/friendsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/friends_button_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/battlesLabel" />

        <Button
            android:id="@+id/collectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/collection_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friendsLabel" />

        <TextView
            android:id="@+id/moneyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="160dp"
            android:text="@string/money_label"
            app:layout_constraintStart_toEndOf="@+id/battlesLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/moneyText"
            android:layout_width="97dp"
            android:layout_height="39dp"
            android:layout_marginTop="152dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toEndOf="@+id/moneyLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/levelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="224dp"
            android:text="@string/level_label"
            app:layout_constraintStart_toEndOf="@+id/friendsLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/levelText"
            android:layout_width="97dp"
            android:layout_height="39dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.573"
            app:layout_constraintStart_toEndOf="@+id/levelLabel"
            app:layout_constraintTop_toBottomOf="@+id/moneyText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>