<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shop_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivityMap.ShopFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="382dp"
        android:layout_height="382dp">

        <TextView
            android:id="@+id/currencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/currency_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemOne" />

        <TextView
            android:id="@+id/shopLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/shop_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shopPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/shop_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopLabel" />

        <FrameLayout
            android:id="@+id/itemOne"
            android:layout_width="96dp"
            android:layout_height="185dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="123dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopPrompt"
            app:layout_constraintVertical_bias="0.0" />

        <FrameLayout
            android:id="@+id/itemTwo"
            android:layout_width="96dp"
            android:layout_height="185dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/itemOne"
            app:layout_constraintStart_toEndOf="@+id/itemOne"
            app:layout_constraintTop_toBottomOf="@+id/shopPrompt"
            app:layout_constraintVertical_bias="1.0">

        </FrameLayout>

        <FrameLayout
            android:id="@+id/itemThree"
            android:layout_width="96dp"
            android:layout_height="185dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/itemTwo"
            app:layout_constraintStart_toEndOf="@+id/itemTwo"
            app:layout_constraintTop_toBottomOf="@+id/shopPrompt"
            app:layout_constraintVertical_bias="1.0">

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>